test/files/neg/bug588.check
bug588.scala:3: error: double definition:
method visit:((Int) => String)Boolean and
method visit:((Int) => unit)Boolean at line 2
have same type after erasure: (Function1)Boolean
  def visit(f: Int => String): Boolean
      ^
bug588.scala:10: error: double definition:
method f:(Test.this.TypeB)Unit and
method f:(Test.this.TypeA)Unit at line 9
have same type after erasure: (Test#TraitA)Unit
  def f(brac : TypeB) : Unit;
      ^
two errors found
